# ratec-ai-engine

./: .env.example  .gitignore  00-VISION.md  01-START_HERE.md  CLAUDE.md  Dockerfile  Dockerfile.comfyui  Dockerfile.runtime  Dockerfile.serverless  docker-compose.yml  handler.py  pyproject.toml  requirements-dev.txt  requirements-handler.txt  requirements.txt  test_remote.py  test_runpod.py
.claude/: settings.local.json
.github/workflows/: build-comfyui.yml  build-runtime.yml  build-serverless.yml
docs/: 00-VISION.md  01-START_HERE.md
docs/api/: ADMIN_API.md  API_CONTRACT.md  endpoints.md
docs/architecture/: branching-strategy.md  overview.md
docs/deployment/: DEPLOY_CHECKLIST.md  RUNPOD_DEPLOYMENT.md
docs/providers/: adding-providers.md
docs/ratec-ai-engine-docs/: CHANGELOG.md  COMFYUI.md  CONTRIBUTING.md  DECISIONS.md  DIRECTIVES.md  GOODLOOK_INTEGRATION.md  PRD.md  RELEASE_PROCESS.md  ROADMAP.md  RUNPOD.md
docs/workflows/: creating-workflows.md
examples/: README.md
examples/integration/: submit_job.py
examples/payloads/: audio-transcription.json  echo.json  image-generation.json
lab_data/: lab.db
models/: README.md
models/flux-1-dev/: metadata.yaml
models/gpt-4o/: metadata.yaml
playground/: README.md  __init__.py  catalog.py  requirements.txt  server.py
runtime/: __init__.py  bootstrap.py  configuration.py  download.py  executor.py  health.py  manifest.yaml  observability.py  server.py  upload.py  workflow.py
scripts/: install_models.py  start.sh  verify_installation.py
src/: main.py
src/api/v1/: jobs.py  (+6 more)
workflows/: README.md
(+122 files in other folders)
